Replace all source with implementation for groups with time